# peat-btle

./: .gitignore  .goa  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  README.md  RELEASE.md  SECURITY.md  build.rs  eche-btle-implementation-kickstart.md  eche-btle-m5stack-samsung-test-plan.md  eche-btle-quickstart-guide.md  hive-btle-implementation-kickstart.md  hive-btle-m5stack-samsung-test-plan.md  hive-btle-quickstart-guide.md  peat-btle-implementation-kickstart.md  peat-btle-m5stack-samsung-test-plan.md  peat-btle-quickstart-guide.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.radicle/: ambient.yaml  native.yaml
android/: README.md  build.gradle.kts  consumer-rules.pro  gradle.properties  proguard-rules.pro  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/java/com/defenseunicorns/peat/: AdvertiseCallbackProxy.kt  GattCallbackProxy.kt  PeatBtle.kt  ScanCallbackProxy.kt
android/src/main/java/com/hive/btle/: AdvertiseCallbackProxy.kt  GattCallbackProxy.kt  HiveBtle.kt  ScanCallbackProxy.kt
android/src/main/java/com/revolveteam/hive/: AdvertiseCallbackProxy.kt  DeviceIdentity.kt  EcheBtle.kt  GattCallbackProxy.kt  HiveBtle.kt  HiveMesh.kt  IdentityAttestation.kt  MeshGenesis.kt  ScanCallbackProxy.kt
android/src/main/java/com/revolveteam/peat/: AdvertiseCallbackProxy.kt  GattCallbackProxy.kt  PeatBtle.kt  ScanCallbackProxy.kt
android/src/main/kotlin/uniffi/eche_btle/: eche_btle.kt
android/src/main/kotlin/uniffi/hive_btle/: hive_btle.kt
android/src/main/kotlin/uniffi/peat_btle/: peat_btle.kt
docs/: API.md  ARCHITECTURE_REFACTORING.md  CI_ARCHITECTURE.md  INTEGRATION.md  RANGE_TEST_NOTES.md  SYNC_PROTOCOL.md  UNIFFI_MIGRATION.md  eche-btle-slicksheet.md  encryption-performance.md  high-priority-sync-mode.md  hive-btle-slicksheet.md  peat-btle-slicksheet.md  security-architecture.md  security-integration.md  security-operations.md  wearos-ble-issues.md
docs/adr/: 001-hive-lite-primitives.md  03-eche-mesh-app-architecture-v2.md  03-hive-mesh-app-architecture-v2.md  03-peat-mesh-app-architecture-v2.md  04-mobile-desktop-architecture.md  ADR-001-trust-architecture.md  ADR-002-mesh-provisioning.md  ADR-003-extensible-document-registry.md
examples/: README.md  basic_mesh.rs  ble_responder.rs  ble_test_client.rs  canned_message_sync.rs  encryption_demo.rs  linux_scanner.rs  peer_e2ee.rs  profile_stress.rs  range_test_node.rs  range_test_node_macos.rs
examples/adafruit-clue/: LIMITATIONS.md
examples/feather-sense/: Cargo.toml  Makefile  RUST-NRF52840.md  build.rs  memory-softdevice.x  memory.x
examples/feather-sense/src/: adv_test.rs  bare_blinky.rs  ble_advertiser.rs  blinky.rs  blinky_adv.rs  blinky_periph.rs  eche_node.rs  embassy_test.rs  exact_example.rs  hive_node.rs  main.rs  minimal.rs  minimal_adv.rs  peat_node.rs  pure_blinky.rs  raw_blinky.rs  sd_blink.rs  sd_minimal.rs  sd_test.rs
examples/nano33-ble-sense/: Cargo.toml  README.md  memory.x
examples/nano33-ble-sense/.cargo/: config.toml
examples/nano33-ble-sense/src/: main.rs
ios/: .gitignore  Package.swift  README.md  build-ios.sh
ios/EcheTest/: ContentView.swift  EcheTestApp.swift  Info.plist
ios/EcheTest/EcheBridge/: EcheFFI.swift  eche_apple_ffi.swift  eche_apple_ffiFFI.h  eche_apple_ffiFFI.modulemap
ios/EcheTest/Extensions/: Color+Platform.swift
ios/EcheTest/Models/: EchePeer.swift
ios/EcheTest/ViewModels/: EcheViewModel.swift
ios/HiveTest/: ContentView.swift  HiveTestApp.swift  Info.plist
ios/HiveTest/Extensions/: Color+Platform.swift
ios/HiveTest/HiveBridge/: HiveFFI.swift  hive_apple_ffi.swift  hive_apple_ffiFFI.h
ios/HiveTest/Models/: HivePeer.swift
ios/HiveTest/ViewModels/: HiveViewModel.swift
ios/PeatTest/: ContentView.swift  Info.plist  PeatTestApp.swift
ios/PeatTest/Extensions/: Color+Platform.swift
ios/PeatTest/Models/: PeatPeer.swift
ios/PeatTest/PeatBridge/: PeatFFI.swift  peat_apple_ffi.swift  peat_apple_ffiFFI.h
ios/PeatTest/ViewModels/: PeatViewModel.swift
ios/eche-apple-ffi/: Cargo.toml
ios/eche-apple-ffi/src/: lib.rs
ios/hive-apple-ffi/: Cargo.toml  uniffi-bindgen.rs
ios/hive-apple-ffi/src/: lib.rs
ios/peat-apple-ffi/: Cargo.toml  build.rs
ios/peat-apple-ffi/src/: lib.rs
scripts/: functional-test.sh
src/: address_rotation.rs  config.rs  document.rs  document_sync.rs  eche_lite_sync.rs  eche_mesh.rs  error.rs  gossip.rs  hive_lite_sync.rs  hive_mesh.rs  lib.rs  observer.rs  peat_mesh.rs  peer.rs  peer_lifetime.rs  peer_manager.rs  persistence.rs  reconnect.rs  registry.rs  relay.rs  transport.rs  uniffi_bindings.rs
src/discovery/: advertiser.rs  beacon.rs  encrypted_beacon.rs  mod.rs  scanner.rs
src/gatt/: characteristics.rs  mod.rs  protocol.rs  service.rs
src/mesh/: manager.rs  mod.rs  routing.rs  topology.rs
src/phy/: controller.rs  mod.rs  strategy.rs  types.rs
src/platform/: embedded.rs  esp32.rs  mock.rs  mod.rs
src/platform/android/: adapter.rs  connection.rs  jni_bridge.rs  mod.rs
src/platform/apple/: adapter.rs  central.rs  connection.rs  delegates.rs  mod.rs  peripheral.rs
src/platform/linux/: adapter.rs  connection.rs  mod.rs
src/platform/windows/: adapter.rs  advertiser.rs  connection.rs  gatt_server.rs  mod.rs  watcher.rs
src/power/: mod.rs  profile.rs  scheduler.rs
src/security/: genesis.rs  identity.rs  membership_token.rs  mesh_key.rs  mod.rs  peer_key.rs  peer_session.rs  persistence.rs  registry.rs  signed_payload.rs
src/sync/: batch.rs  crdt.rs  delta.rs  delta_document.rs  mod.rs  protocol.rs
tests/: apple_corebluetooth_test.rs  canned_message_sync.rs  emergency_flow.rs  encryption_benchmark.rs  mesh_sync.rs  peer_connection_test.rs
