[package]
name = "hive-btle"
version = "0.1.0"
edition = "2021"
authors = ["(r)evolve - Revolve Team LLC"]
license = "Apache-2.0"
description = "Bluetooth Low Energy mesh transport for HIVE Protocol"
repository = "https://github.com/r-evolve/hive-btle"
keywords = ["bluetooth", "ble", "mesh", "hive", "tactical"]
categories = ["network-programming", "embedded"]

[lib]
# Build as both a Rust library and a C dynamic library (for Android JNI)
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]

# Standard library support (disable for embedded)
std = ["thiserror/std", "uuid/std"]

# Platform-specific features
linux = ["dep:bluer", "dep:tokio"]
android = ["dep:jni", "dep:ndk", "dep:tokio"]
macos = ["dep:objc2", "dep:block2", "dep:tokio", "dep:objc2-foundation", "dep:objc2-core-bluetooth"]
ios = ["dep:objc2", "dep:block2", "dep:tokio", "dep:objc2-foundation", "dep:objc2-core-bluetooth"]
windows = ["dep:windows", "dep:tokio"]

# Embedded/no_std support
embedded = []

# ESP32 support (requires esp-idf toolchain)
# Build with: cargo build --target xtensa-esp32-espidf --features esp32
esp32 = ["embedded", "std", "dep:esp-idf-svc", "dep:esp-idf-hal"]

# BLE 5.0 features
coded-phy = []
extended-adv = []

[dependencies]
# Core dependencies (always included)
async-trait = "0.1"
uuid = { version = "1.11", default-features = false }
bitflags = "2.6"
log = "0.4"

# Error handling
thiserror = { version = "2.0", default-features = false }

# Spin locks for no_std
spin = { version = "0.9", default-features = false, features = ["rwlock"] }

# Encryption (mesh-wide and per-peer E2EE)
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Async runtime (optional, for std platforms)
tokio = { version = "1.42", features = ["sync", "time", "macros", "rt-multi-thread"], optional = true }

# Linux/BlueZ (optional)
bluer = { version = "0.17", optional = true }

# Android JNI (optional)
jni = { version = "0.21", optional = true }
ndk = { version = "0.9", optional = true }

# Apple CoreBluetooth (optional)
objc2 = { version = "0.5", optional = true }
block2 = { version = "0.5", optional = true }
objc2-foundation = { version = "0.2", optional = true }
objc2-core-bluetooth = { version = "0.2", features = ["all"], optional = true }

# Windows WinRT (optional)
windows = { version = "0.58", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
    "implement",
], optional = true }

# ESP32/ESP-IDF (optional)
esp-idf-svc = { version = "0.50", optional = true }
esp-idf-hal = { version = "0.45", optional = true }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
features = ["linux"]
