[package]
name = "hive-btle"
version = "0.1.0"
edition = "2021"
authors = ["(r)evolve - Revolve Team LLC"]
license = "Apache-2.0"
description = "Bluetooth Low Energy mesh transport for HIVE Protocol"
repository = "https://app.radicle.xyz/nodes/rosa.radicle.xyz/rad:z458mp9Um3AYNQQFMdHaNEUtmiohq"
keywords = ["bluetooth", "ble", "mesh", "hive", "tactical"]
categories = ["network-programming", "embedded"]

[lib]
# Build as both a Rust library and a C dynamic library (for UniFFI bindings)
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]

# Standard library support (disable for embedded)
std = ["thiserror/std", "uuid/std"]

# Legacy chat support (deprecated, will be removed in 0.2.0)
legacy-chat = []

# UniFFI bindings (generates Kotlin + Swift)
uniffi = ["dep:uniffi"]

# Platform-specific features
linux = ["dep:bluer", "dep:tokio", "dep:tokio-stream"]
android = ["uniffi", "dep:tokio", "dep:android_logger"]
macos = ["dep:objc2", "dep:block2", "dep:tokio", "dep:objc2-foundation", "dep:objc2-core-bluetooth"]
ios = ["dep:objc2", "dep:block2", "dep:tokio", "dep:objc2-foundation", "dep:objc2-core-bluetooth"]
windows = ["dep:windows", "dep:tokio"]

# Embedded/no_std support
embedded = []

# ESP32 support (requires esp-idf toolchain)
# Build with: cargo build --target xtensa-esp32-espidf --features esp32
esp32 = ["embedded", "std", "dep:esp-idf-svc", "dep:esp-idf-hal"]

# BLE 5.0 features
coded-phy = []
extended-adv = []

# hive-lite integration for CannedMessage sync
hive-lite-sync = ["dep:hive-lite", "std"]

[dependencies]
# Core dependencies (always included)
async-trait = "0.1"
uuid = { version = "1.11", default-features = false }
bitflags = "2.6"
log = "0.4"

# Error handling
thiserror = { version = "2.0", default-features = false }

# Spin locks for no_std
spin = { version = "0.9", default-features = false, features = ["rwlock"] }

# Encryption (mesh-wide and per-peer E2EE)
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Identity and signing (DeviceIdentity, MeshGenesis)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake3 = "1.5"

# no_std HashMap for IdentityRegistry
hashbrown = "0.15"

# hive-lite integration (optional)
# Provides DocumentType impl for CannedMessageAckEvent
hive-lite = { version = "0.0.4", optional = true }

# UniFFI for cross-language bindings (optional)
uniffi = { version = "0.31", optional = true }

# Async runtime (optional, for std platforms)
tokio = { version = "1.42", features = ["sync", "time", "macros", "rt-multi-thread"], optional = true }

# Linux/BlueZ (optional)
bluer = { version = "0.17", features = ["bluetoothd"], optional = true }
tokio-stream = { version = "0.1", optional = true }

# Android logging (optional)
android_logger = { version = "0.14", optional = true }

# Apple CoreBluetooth (optional)
objc2 = { version = "0.5", optional = true }
block2 = { version = "0.5", optional = true }
objc2-foundation = { version = "0.2", features = ["NSRunLoop", "NSDate", "NSString", "NSObjCRuntime"], optional = true }
objc2-core-bluetooth = { version = "0.2", features = ["all"], optional = true }

# Windows WinRT (optional)
windows = { version = "0.58", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
    "implement",
], optional = true }

# ESP32/ESP-IDF (optional)
esp-idf-svc = { version = "0.50", optional = true }
esp-idf-hal = { version = "0.45", optional = true }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "signal"] }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

# Examples with platform-specific features
[[example]]
name = "range_test_node_macos"
required-features = ["macos"]

[package.metadata.docs.rs]
features = ["linux"]
