[package]
name = "hive-apple-ffi"
version = "0.1.0"
edition = "2021"
description = "UniFFI bindings for hive-btle on Apple platforms"
publish = false

# Keep this crate out of the main workspace
[workspace]

[lib]
crate-type = ["staticlib", "cdylib"]
name = "hive_apple_ffi"

[dependencies]
# hive-btle with Apple platform support
hive-btle = { path = "../..", features = ["macos"] }

# UniFFI for Swift bindings
uniffi = { version = "0.28", features = ["cli"] }

# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "sync"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"

# For mock data generation
rand = "0.8"
uuid = { version = "1.11", features = ["v4"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = []
ios = ["hive-btle/ios"]
macos = ["hive-btle/macos"]
